Tue Jun  8 10:02:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
        * tao/Strategies/UIOP_Acceptor.cpp:
        * tao/Strategies/UIOP_Connector.cpp:
          Layout changes to debug statements

Tue Jun  8 09:04:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
          Changed the internal code for the AMI4CCM connector

        * tao/Transport_Acceptor.h:
        * tao/Transport_Cache_Manager_T.cpp:
          Layout changes

Tue Jun  8 06:27:30 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/Bug_3853_Regression/Client_ORBInitializer.cpp:
        * tests/Bug_3853_Regression/client_interceptor.cpp:

          Fixed warnings.

Mon Jun  7 20:57:41 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/Bug_3853_Regression/Bug_3853_Regression.mpc:

          Added avoids_minimum_corba, avoids_corba_e_compact, and
          avoids_corba_e_micro.

Mon Jun  7 16:48:20 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/Bug_3853_Regression/Client_ORBInitializer.h:
        * tests/Bug_3853_Regression/Client_ORBInitializer.cpp:
        * tests/Bug_3853_Regression/client.cpp:
        * tests/Bug_3853_Regression/client_interceptor.h:
        * tests/Bug_3853_Regression/client_interceptor.cpp:

          Fixed fuzz errors.

Mon Jun  7 08:54:31 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Loader.cpp:
          Fixed a memory leak. PortableGroup library doesn't need to init
          required services as it's responsibility of ACE to do so once a
          service is created.

        * orbsvcs/tests/Miop/McastHello/svc.conf:
          Fixed the test so that in dynamic builds required services from
          svc.conf are loaded as needed.

Mon Jun  7 01:23:51 UTC 2010  Yan Dai  <dai_y@ociweb.com>
