@@ -129,8 +129,7 @@ int
 be_visitor_attribute_set_from_extracted::visit_structure (
   be_structure *node)
 {
-  os_ << (node->size_type () == AST_Type::VARIABLE ? "" : "*")
-      << var_name_;
+  os_ << "*" << var_name_;
   return 0;
 }
 
